[gd_scene load_steps=4 format=3 uid="uid://onv7gn5fqbtt"]

[ext_resource type="Script" path="res://Scripts/enemy_patrol.gd" id="1_01m10"]
[ext_resource type="Texture2D" uid="uid://cyewq7jf63e3e" path="res://Assets/Characters/Duck Girl/DuckGirl.png" id="1_e6tn1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c732y"]
size = Vector2(15, 15)

[node name="EnemyPatrol" type="CharacterBody2D"]
scale = Vector2(2, 2)
script = ExtResource("1_01m10")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("1_e6tn1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RayCastFloorLeft" type="RayCast2D" parent="."]
position = Vector2(8, 8)
target_position = Vector2(0, 10)

[node name="RayCastFloorRight" type="RayCast2D" parent="."]
position = Vector2(-7, 8)
target_position = Vector2(0, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0.5)
shape = SubResource("RectangleShape2D_c732y")

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(-7, -1.5)
target_position = Vector2(-20, 0)

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(8, -2)
target_position = Vector2(20, 0)
